# coc-compliance

./: README.md  pyproject.toml  setup.py
coc_compliance/: __init__.py  cli.py  config_gen.py  detect.py  regimes.py
tests/: test_config_gen.py  test_detect.py  test_regimes.py
