[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coc-compliance"
version = "1.0.1"
description = "Auto-detect your agent setup and configure Chain of Consciousness compliance logging"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AB Support / Vibe Agent Making", email = "support@vibeagentmaking.com"},
]
keywords = ["compliance", "ai", "agent", "coc", "chain-of-consciousness", "hipaa", "soc2", "pci", "eu-ai-act"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["coc_compliance*"]

[project.scripts]
coc-compliance = "coc_compliance.cli:main"

[project.urls]
Homepage = "https://vibeagentmaking.com/compliance"
Repository = "https://github.com/alexfleetcommander/coc-compliance"
Issues = "https://github.com/alexfleetcommander/coc-compliance/issues"
